// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders link button correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 600;
  padding: 0 14px;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  margin-right: 14px;
  cursor: pointer;
  color: #fff;
  background-color: #009cde;
  border: 1px solid #009cde;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  color: #fff;
  background-color: #bfe6f7;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<a
  className="c0"
  href="/"
>
  Dummy Label
</a>
`;

exports[`<Button /> renders outline button correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 600;
  padding: 0 14px;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  margin-right: 14px;
  cursor: pointer;
  color: #009cde;
  background-color: #fff;
  border: 1px solid #009cde;
}

.c0:disabled {
  color: #bfe6f7;
  background-color: #fff;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<button
  className="c0"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders outline disabled button correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 600;
  padding: 0 14px;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  margin-right: 14px;
  cursor: pointer;
  color: #009cde;
  background-color: #fff;
  border: 1px solid #009cde;
}

.c0:disabled {
  color: #bfe6f7;
  background-color: #fff;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<button
  className="c0"
  disabled={true}
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard button correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 600;
  padding: 0 14px;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  margin-right: 14px;
  cursor: pointer;
  color: #fff;
  background-color: #009cde;
  border: 1px solid #009cde;
}

.c0:disabled {
  color: #fff;
  background-color: #bfe6f7;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<button
  className="c0"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard disabled button correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  font-weight: 600;
  padding: 0 14px;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  margin-right: 14px;
  cursor: pointer;
  color: #fff;
  background-color: #009cde;
  border: 1px solid #009cde;
}

.c0:disabled {
  color: #fff;
  background-color: #bfe6f7;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<button
  className="c0"
  disabled={true}
>
  Dummy Label
</button>
`;
